--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.1",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
